# Etsy-Information-to-Sevdesk

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ETSY_API_SETUP.md  LICENSE  MIGRATION_GUIDE.md  Makefile  README-SIMPLE.md  README.md  STATUS.md  TESTING.md  alembic.ini  docker-compose.yml  get_shop_id.py  pyproject.toml  requirements-dev.txt  requirements-simple.txt  requirements.txt  run_sync.py  setup.py
alembic/: env.py
app/: __init__.py
app/api/: main.py
app/clients/: base.py  etsy_client.py  sevdesk_client.py
app/core/: __init__.py  config.py  currency.py  idempotency.py  logging.py  time.py
app/db/: base.py  models.py
app/export/: __init__.py  csv_exporter.py
app/tests/: conftest.py
app/tests/unit/: test_csv_export.py  test_currency.py
config/: account_mapping_skr03.json  account_mapping_skr04.json  config.yaml  tax_rules.json
